--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "ngrok": "^4.3.3",
     "nodemon": "^2.0.20",
-    "qrcode": "^1.5.1"
+    "qrcode": "^1.5.1",
+    "sequelize": "^6.28.0"
   }
 }
