--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.0.1",
     "ngrok": "^4.3.3",
     "nodemon": "^2.0.20",
     "qrcode": "^1.5.1",
