--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ngrok": "^4.3.3",
     "nodemon": "^2.0.20",
     "qrcode": "^1.5.1",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.28.0",
+    "sequelize-auto": "^0.8.8"
   }
 }
